--- a/tomograf.ipynb
+++ b/tomograf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,13 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6d0b42bc55e4cf8b5001cafeb7328ab",
+       "model_id": "2da55a5d6967467cb1c98cc76d65fda3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,25 +154,32 @@
        "<function ipywidgets.widgets.interaction._InteractFactory.__call__.<locals>.<lambda>(*args, **kwargs)>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# config\n",
-    "SOURCE_IMAGE_PATH = 'Input/Kwadraty2.jpg'\n",
+    "SOURCE_IMAGE_PATH = 'Input/Img/Kwadraty2.jpg'\n",
     "NUMBER_OF_RECONSTRUCTED_IMAGES = 4\n",
     "# config\n",
     "\n",
     "tomograph = Tomograph()\n",
     "interact(tomograph.run, source=fixed(SOURCE_IMAGE_PATH), n_images=fixed(NUMBER_OF_RECONSTRUCTED_IMAGES))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -186,9 +193,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.9"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
