Add efficiency graphs

--- a/tomograf.ipynb
+++ b/tomograf.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tomograph:\n",
-    "    def __configure(self, img, *, alpha=1, n_detectors=1000, phi=np.pi):\n",
+    "    def __configure(self, img, *, alpha=1, n_detectors=1000, phi=np.pi, hamm_filter=True):\n",
     "        self.img = img\n",
     "        self.__reshape_img()\n",
     "        self.img = np.asarray(self.img)\n",
@@ -30,6 +30,7 @@
     "        self.n_steps = int(np.floor(180 / self.alpha))\n",
     "        self.generated_sinogram = np.zeros((self.n_steps, self.n_detectors), dtype=int)\n",
     "        self.bresenham_lines = []\n",
+    "        self.hamm_filter = hamm_filter\n",
     "\n",
     "    def __reshape_img(self):\n",
     "        width, height = self.img.size\n",
@@ -70,7 +71,8 @@
     "                self.generated_sinogram[i][detector] += self.img[rr, cc].sum()\n",
     "                self.bresenham_lines.append([rr, cc])\n",
     "\n",
-    "            self.generated_sinogram[i] = np.array(np.convolve(self.generated_sinogram[i], sl_filter, 'same'))\n",
+    "            if self.hamm_filter:\n",
+    "                self.generated_sinogram[i] = np.array(np.convolve(self.generated_sinogram[i], sl_filter, 'same'))\n",
     "            i += 1\n",
     "            # print(i)\n",
     "\n",
@@ -110,9 +112,9 @@
     "    def rmse(self, img1, img2):\n",
     "        return np.sqrt(np.mean((img1-img2)**2))\n",
     "    \n",
-    "    def run(self, source, *, alpha=1, n_detectors=1000, phi=np.pi, n_images=4):\n",
+    "    def run(self, source, *, alpha=1, n_detectors=1000, phi=np.pi, n_images=4, hamm_filter=True):\n",
     "        initial_img = Image.open(source).convert('L')\n",
-    "        self.__configure(initial_img, alpha=alpha, n_detectors=n_detectors, phi=phi)\n",
+    "        self.__configure(initial_img, alpha=alpha, n_detectors=n_detectors, phi=phi, hamm_filter=hamm_filter)\n",
     "        self.__generate_sinogram()\n",
     "        path = 'Output/Sinogram/sinogram.jpg'\n",
     "        self.get_sinogram().save(path)\n",
@@ -131,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2da55a5d6967467cb1c98cc76d65fda3",
+       "model_id": "705e285d67bd48f2803f05d1af76d774",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +156,7 @@
        "<function ipywidgets.widgets.interaction._InteractFactory.__call__.<locals>.<lambda>(*args, **kwargs)>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
